--- a/RPS/package.json
+++ b/RPS/package.json
@@ -22,11 +22,14 @@
     "@angular/router": "~9.1.1",
     "@angular/service-worker": "~9.1.1",
     "@capacitor/core": "2.0.1",
+    "@ionic-native/camera": "^5.24.0",
     "@ionic-native/core": "^5.23.0",
+    "@ionic-native/file": "^5.24.0",
     "@ionic-native/splash-screen": "^5.23.0",
     "@ionic-native/status-bar": "^5.23.0",
     "@ionic/angular": "^5.0.7",
     "@ionic/cli": "^6.6.0",
+    "cordova-plugin-camera": "^4.1.0",
     "crypto-js": "^4.0.0",
     "firebase": "^7.14.0",
     "gl-ionic-background-video": "0.0.5",
@@ -65,6 +68,8 @@
   },
   "description": "An Ionic project",
   "cordova": {
-    "plugins": {}
+    "plugins": {
+      "cordova-plugin-camera": {}
+    }
   }
 }
